# know

./: .agent.md  .gitignore  .pnp.cjs  AGENTS.md  Cargo.toml  README.md  SystemDevelopmentPlan.md  demo.sh  install.sh  instructions.md  mvp-plan.md  package.json  try-demo.sh  tsdown.config.ts
.codex/: hooks.json
.github/agents/: socratic.agent.md
.github/workflows/: release.yml
.know/: linkVerification.lock.toml  linkVerification.toml
.know/concepts/: skyroute.toml
.know/rules/: skyroute.toml
.knowledge/: .gitignore  agent-instructions.md
.knowledge/concepts/: concepts.md  knowledge-system.md  rules.md
docs/: configSyntax.md  futureIdeas.md  integrationSurfaces.md  knowFileStructure.md  knowledgeFiles.md  primitives.md  techStack.md
hackathon/: SUBMISSION.md  VIDEO_SCRIPT.md
marketing/: JobsToBeDone.md  elevatorPitch.md  marketingStrategy.md
scripts/: copy-tree-sitter-wasms.mjs  prepare-fixture-repo.mjs  prepare-init-repo.mjs  prepare-product-maturity.mjs
src/: agent-instructions.ts  analysis.rs  anchors.ts  cli.rs  cli.ts  codex_hook.rs  config.rs  context.ts  db.ts  index.rs  index.ts  indexer.ts  init.ts  lib.rs  main.rs  output.rs  parser.ts  query.ts  review.ts  status.ts  sync.ts
system-architecture/: configSyntax.md  designNotes.md  futureIdeas.md  integrationSurfaces.md  knowledgeFiles.md  primitives.md  techStack.md
tests/: anchors.test.ts  context.test.ts  db.test.ts  indexer.test.ts  init.test.ts  mvp.rs  parser.test.ts  product-maturity.test.ts  query.test.ts  review.test.ts  status.test.ts  sync.test.ts
(+31 files in other folders)
